# any-auto-register

./: Dockerfile  README.md  README_en.md  README_vi.md  docker-compose.yml  main.py  pyproject.toml  start_backend.bat  start_backend.ps1  stop_backend.bat
.issues/: outlook-mail-station.md  uv-pyenv-migration.md
core/: base_mailbox.py
electron/: build-backend.sh
services/: external_apps.py
